--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,37 @@
 <html>
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
+
   <style>
+    .login-body {
+      text-align: center;
+    }
+
+    .login-div {
+      position: relative;
+      display: inline-block;
+      padding: 20px;
+      text-align: left;
+    }
+
+    .login-input {
+      display: block;
+      margin-top: 1em;
+      margin-bottom: 1em;
+      margin-left: 0;
+      margin-right: 0;
+
+      line-height: 20px;
+      text-indent: 5px;
+    }
+
+    .login-button {
+      position: absolute;
+      bottom: 0;
+      line-height: 20px;
+    }
   </style>
 </head>
 
