Rewrite design with Bulma

--- a/static/index.html
+++ b/static/index.html
@@ -1,41 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="UTF-8">
 
-  <style>
-    .login-body {
-      text-align: center;
-    }
+  <link rel="stylesheet" href="/bulma.css">
+  <script defer src="/font-awesome-all.js"></script>
 
-    .login-div {
-      position: relative;
-      display: inline-block;
-      padding: 20px;
-      text-align: left;
-    }
-
-    .login-input {
-      display: block;
-      margin-top: 1em;
-      margin-bottom: 1em;
-      margin-left: 0;
-      margin-right: 0;
-
-      line-height: 20px;
-      text-indent: 5px;
-    }
-
-    .login-button {
-      position: absolute;
-      bottom: 0;
-      line-height: 20px;
-    }
-  </style>
+  <script src="/web-client.js"></script>
 </head>
 
-<body>
-  <script src="/web-client.js"></script>
-</body>
+</html>
