--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,23 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="/bulma.css">
-  <script defer src="/font-awesome-all.js"></script>
 
-  <script src="/web-client.js"></script>
+  <script defer src="/font-awesome-all.js"></script>
+  <script defer src="/web-client.js"></script>
 </head>
 
 </html>
+
+<body>
+  <section class="hero is-fullheight">
+    <div class="hero-body">
+      <div class="container">
+        <div class="columns is-centered is-vcentered is-mobile" ,>
+          <div class="column" style="max-width: 250px;">
+            <progress class="progress is-medium is-dark" max="100">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
