--- a/static/index.html
+++ b/static/index.html
@@ -17,7 +17,7 @@
   <section class="hero is-fullheight">
     <div class="hero-body">
       <div class="container">
-        <div class="columns is-centered is-vcentered is-mobile" ,>
+        <div class="columns is-centered is-vcentered is-mobile">
           <div class="column" style="max-width: 250px;">
             <progress class="progress is-medium is-dark" max="100">
           </div>
